# django_practice

./: README.md  functional_test.py  pyproject.toml
config/: settings.py  urls.py
functional_tests/: tests.py
lists/: tests.py  urls.py  views.py
lists/migrations/: 0001_initial.py  0002_item_text.py  0003_list.py  0004_item_list.py  0005_alter_item_list.py  0006_remove_list_text.py
lists/templates/: home.html  list.html
users/: tests.py  urls.py  views.py
