[tool.poetry]
name = "django-practice"
version = "0.1.0"
description = ""
authors = ["YH Kim <yeongh.kim17@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.4"
selenium = "^4.21.0"
black = "^24.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
